PAL-999 updated attributeMaskingService tests and javadoc